Fix broken QUrl construction

This fixes a regression caused by the KUrl -> QUrl port.
QUrl::fromUserInput results in an URL with the http:// scheme,
while we need to gdrive:// one.

BUG: 367988
BUG: 369581
FIXED-IN: 1.0.1